# substrate

client/executor/: Cargo.toml
client/executor/wasmedge/: Cargo.toml
client/executor/wasmedge/src/: host.rs  instance_wrapper.rs  lib.rs  runtime.rs  tests.rs  util.rs
