[package]
edition = "2021"
name = "wasmedge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
libc = "0.2.112"
log = "0.4.8"
parity-wasm = "0.42.0"
sc-allocator = {version = "4.1.0-dev", path = "../../allocator"}
sc-executor-common = {version = "0.10.0-dev", path = "../common"}
sp-runtime-interface = {version = "6.0.0", path = "../../../primitives/runtime-interface"}
sp-wasm-interface = {version = "6.0.0", path = "../../../primitives/wasm-interface"}
wasmedge-sys = "0.4.0"

[dev-dependencies]
wat = "1.0"
